tests/baselines/reference/protectedInstanceMemberAccessibility(strict=true).errors.txt
protectedInstanceMemberAccessibility.ts(2,15): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
protectedInstanceMemberAccessibility.ts(9,15): error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
protectedInstanceMemberAccessibility.ts(14,23): error TS2339: Property 'z' does not exist on type 'B'.
protectedInstanceMemberAccessibility.ts(16,24): error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.
protectedInstanceMemberAccessibility.ts(18,24): error TS2339: Property 'y' does not exist on type 'A'.
protectedInstanceMemberAccessibility.ts(19,24): error TS2339: Property 'z' does not exist on type 'A'.
protectedInstanceMemberAccessibility.ts(22,18): error TS2454: Variable 'a' is used before being assigned.
protectedInstanceMemberAccessibility.ts(22,20): error TS2446: Property 'x' is protected and only accessible through an instance of class 'B'. This is an instance of class 'A'.
protectedInstanceMemberAccessibility.ts(23,18): error TS2454: Variable 'a' is used before being assigned.
protectedInstanceMemberAccessibility.ts(23,20): error TS2446: Property 'f' is protected and only accessible through an instance of class 'B'. This is an instance of class 'A'.
protectedInstanceMemberAccessibility.ts(24,18): error TS2454: Variable 'a' is used before being assigned.
protectedInstanceMemberAccessibility.ts(24,20): error TS2339: Property 'y' does not exist on type 'A'.
protectedInstanceMemberAccessibility.ts(25,18): error TS2454: Variable 'a' is used before being assigned.
protectedInstanceMemberAccessibility.ts(25,20): error TS2339: Property 'z' does not exist on type 'A'.
protectedInstanceMemberAccessibility.ts(28,18): error TS2454: Variable 'b' is used before being assigned.
protectedInstanceMemberAccessibility.ts(29,18): error TS2454: Variable 'b' is used before being assigned.
protectedInstanceMemberAccessibility.ts(30,18): error TS2454: Variable 'b' is used before being assigned.
protectedInstanceMemberAccessibility.ts(31,18): error TS2454: Variable 'b' is used before being assigned.
protectedInstanceMemberAccessibility.ts(31,20): error TS2339: Property 'z' does not exist on type 'B'.
protectedInstanceMemberAccessibility.ts(34,18): error TS2454: Variable 'c' is used before being assigned.
protectedInstanceMemberAccessibility.ts(34,20): error TS2446: Property 'x' is protected and only accessible through an instance of class 'B'. This is an instance of class 'C'.
protectedInstanceMemberAccessibility.ts(35,18): error TS2454: Variable 'c' is used before being assigned.
protectedInstanceMemberAccessibility.ts(35,20): error TS2446: Property 'f' is protected and only accessible through an instance of class 'B'. This is an instance of class 'C'.
protectedInstanceMemberAccessibility.ts(36,18): error TS2454: Variable 'c' is used before being assigned.
protectedInstanceMemberAccessibility.ts(36,20): error TS2339: Property 'y' does not exist on type 'C'.
protectedInstanceMemberAccessibility.ts(37,18): error TS2454: Variable 'c' is used before being assigned.
protectedInstanceMemberAccessibility.ts(37,20): error TS2445: Property 'z' is protected and only accessible within class 'C' and its subclasses.
protectedInstanceMemberAccessibility.ts(42,15): error TS2564: Property 'z' has no initializer and is not definitely assigned in the constructor.


==== protectedInstanceMemberAccessibility.ts (28 errors) ====
    class A {
        protected x: string;
                  ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
        protected f(): string {
            return "hello";
        }
    }
    
    class B extends A {
        protected y: string;
                  ~
!!! error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
        g() {
            var t1 = this.x;
            var t2 = this.f();
            var t3 = this.y;
            var t4 = this.z;     // error
                          ~
!!! error TS2339: Property 'z' does not exist on type 'B'.
    
            var s1 = super.x;    // error
                           ~
!!! error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.
            var s2 = super.f();
            var s3 = super.y;    // error
                           ~
!!! error TS2339: Property 'y' does not exist on type 'A'.
            var s4 = super.z;    // error
                           ~
!!! error TS2339: Property 'z' does not exist on type 'A'.
    
            var a: A;
            var a1 = a.x;    // error
                     ~
!!! error TS2454: Variable 'a' is used before being assigned.
                       ~
!!! error TS2446: Property 'x' is protected and only accessible through an instance of class 'B'. This is an instance of class 'A'.
            var a2 = a.f();  // error
                     ~
!!! error TS2454: Variable 'a' is used before being assigned.
                       ~
!!! error TS2446: Property 'f' is protected and only accessible through an instance of class 'B'. This is an instance of class 'A'.
            var a3 = a.y;    // error
                     ~
!!! error TS2454: Variable 'a' is used before being assigned.
                       ~
!!! error TS2339: Property 'y' does not exist on type 'A'.
            var a4 = a.z;    // error
                     ~
!!! error TS2454: Variable 'a' is used before being assigned.
                       ~
!!! error TS2339: Property 'z' does not exist on type 'A'.
    
            var b: B;
            var b1 = b.x;
                     ~
!!! error TS2454: Variable 'b' is used before being assigned.
            var b2 = b.f();
                     ~
!!! error TS2454: Variable 'b' is used before being assigned.
            var b3 = b.y;
                     ~
!!! error TS2454: Variable 'b' is used before being assigned.
            var b4 = b.z;    // error
                     ~
!!! error TS2454: Variable 'b' is used before being assigned.
                       ~
!!! error TS2339: Property 'z' does not exist on type 'B'.
    
            var c: C;
            var c1 = c.x;    // error
                     ~
!!! error TS2454: Variable 'c' is used before being assigned.
                       ~
!!! error TS2446: Property 'x' is protected and only accessible through an instance of class 'B'. This is an instance of class 'C'.
            var c2 = c.f();  // error
                     ~
!!! error TS2454: Variable 'c' is used before being assigned.
                       ~
!!! error TS2446: Property 'f' is protected and only accessible through an instance of class 'B'. This is an instance of class 'C'.
            var c3 = c.y;    // error
                     ~
!!! error TS2454: Variable 'c' is used before being assigned.
                       ~
!!! error TS2339: Property 'y' does not exist on type 'C'.
            var c4 = c.z;    // error
                     ~
!!! error TS2454: Variable 'c' is used before being assigned.
                       ~
!!! error TS2445: Property 'z' is protected and only accessible within class 'C' and its subclasses.
        }
    }
    
    class C extends A {
        protected z: string;
                  ~
!!! error TS2564: Property 'z' has no initializer and is not definitely assigned in the constructor.
    }
    